
        [float]
        ===== Features

        [float]
        ===== Bug fixes

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x


==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

[float]
===== Bug fixes

* Guard against a negative value of `metricsInterval`, which can lead to
  high CPU usage as metrics are collected as fast as possible. Also ensure
  no metrics collection can happen if `metricsInterval="0s"` as intended.
  Before this change it was possible for some metric collection to still
  happen, even though none would be reported. ({pull}2330[#2330])
+
This change also guards against negative and invalid values in the following
configuration options: `abortedErrorThreshold`, `apiRequestTime`, and
`serverTimeout`. If an invalid value is given, then will fallback to their
default value.


[[release-notes-3.21.1]]
==== 3.21.1 2021/09/16

[float]
===== Bug fixes

* Update types to avoid imports of `@types/...` modules (other than
  `@types/node`), so that TypeScript users of elastic-apm-node need not
  manually `npm install @types/connect @types/pino @types/aws-lambda` to
  compile. ({issues}2331[#2331])


[[release-notes-3.21.0]]
==== 3.21.0 2021/09/15

[float]
===== Features

* Add the `longFieldMaxLength` integer configuration option (default `10000`).
  Specific transaction/span/error fields (see the list below) will be truncated
  at this number of unicode characters. ({pull}2193[#2193], {issues}1921[#1921])
+
The `errorMessageMaxLength` configuration option is now *deprecated*, but
still supported. Users should switch to using `longFieldMaxLength`. If
`errorMessageMaxLength` is not specified, truncation of error messages will
now use the `longFieldMaxLength` value.
+
Note that ultimately the maximum length of any tracing field is limited by the